syntax = "proto3";

package neis;

service ScheduleService {
    rpc GetHello(GetHelloRequest) returns (GetHelloResponse) {}
}

message GetHelloRequest {

}

message GetHelloResponse {
    string message = 1;
}

service LunchService {
    rpc GetLunchOfDay(GetLunchOfDayRequest) returns (GetLunchOfDayResponse) {}
    rpc GetLunchOfWeek(GetLunchOfWeekRequest) returns (GetLunchOfWeekResponse) {}
}

message GetLunchOfDayRequest {
    string school_district_code = 1;
    string school_code = 2;
    string date = 3;
}

message GetLunchOfDayResponse {
    Lunch lunch = 1;
}

message GetLunchOfWeekRequest {
    string school_district_code = 1;
    string school_code = 2;
    string date = 3;
}

message GetLunchOfWeekResponse {
    repeated Lunch lunches = 1;
}

message Lunch {
    /*
1	    ATPT_OFCDC_SC_CODE	    시도교육청코드
2	    ATPT_OFCDC_SC_NM	    시도교육청명
3	    SD_SCHUL_CODE	    표준학교코드
4	    SCHUL_NM	    학교명
5	    MMEAL_SC_CODE	    식사코드
6	    MMEAL_SC_NM	    식사명
7	    MLSV_YMD	    급식일자
8	    MLSV_FGR	    급식인원수
9	    DDISH_NM	    요리명
10	    ORPLC_INFO	    원산지정보
11	    CAL_INFO	    칼로리정보
12	    NTR_INFO	    영양정보
13	    MLSV_FROM_YMD	    급식시작일자
14	    MLSV_TO_YMD	    급식종료일자
    */
    string school_district_code = 1; // ATPT_OFCDC_SC_CODE 시도교육청코드
    string school_district_name = 2; // ATPT_OFCDC_SC_NM 시도교육청명
    string school_code = 3; // SD_SCHUL_CODE 표준학교코드
    string school_name = 4; // SCHUL_NM 학교명
    string meal_code = 5; // MMEAL_SC_CODE 식사코드
    string meal_name = 6; // MMEAL_SC_NM 식사명
    string date = 7; // MLSV_YMD 급식일자
    int32 meal_count = 8; // MLSV_FGR 급식인원수
    string dish_name = 9; // DDISH_NM 요리명
    string origin_info = 10; // ORPLC_INFO 원산지정보
    string calorie_info = 11; // CAL_INFO 칼로리정보
    string nutrition_info = 12; // NTR_INFO 영양정보
    string meal_from_date = 13; // MLSV_FROM_YMD 급식시작일자
    string meal_to_date = 14; // MLSV_TO_YMD 급식종료일자
}

service InformationService {
    rpc GetSchoolInfo(GetSchoolInfoRequest) returns (GetSchoolInfoResponse) {}
    rpc GetSchoolList(GetSchoolListRequest) returns (GetSchoolListResponse) {}
}

message GetSchoolInfoRequest {
    string district_code = 1;
    string code = 2;
    string name = 3;
    string kind = 4;
    string location = 5;
    string foundation = 6;
}

message GetSchoolInfoResponse {
    Information school = 1;
}

message GetSchoolListRequest {
    string district_code = 1;
    string name = 2;
    string kind = 3;
    string location = 4;
    string foundation = 5;
}

message GetSchoolListResponse {
    int32 total_count = 1;
    repeated Information schools = 2;
}

message Information {
    /*
1	    ATPT_OFCDC_SC_CODE	    시도교육청코드
2	    ATPT_OFCDC_SC_NM	    시도교육청명
3	    SD_SCHUL_CODE	    표준학교코드
4	    SCHUL_NM	    학교명
5	    ENG_SCHUL_NM	    영문학교명
6	    SCHUL_KND_SC_NM	    학교종류명
7	    LCTN_SC_NM	    소재지명
8	    JU_ORG_NM	    관할조직명
9	    FOND_SC_NM	    설립명
10	    ORG_RDNZC	    도로명우편번호
11	    ORG_RDNMA	    도로명주소
12	    ORG_RDNDA	    도로명상세주소
13	    ORG_TELNO	    전화번호
14	    HMPG_ADRES	    홈페이지주소
15	    COEDU_SC_NM	    남녀공학구분명
16	    ORG_FAXNO	    팩스번호
17	    HS_SC_NM	    고등학교구분명
18	    INDST_SPECL_CCCCL_EXST_YN	    산업체특별학급존재여부
19	    HS_GNRL_BUSNS_SC_NM	    고등학교일반실업구분명
20	    SPCLY_PURPS_HS_ORD_NM	    특수목적고등학교계열명
21	    ENE_BFE_SEHF_SC_NM	    입시전후기구분명
22	    DGHT_SC_NM	    주야구분명
23	    FOND_YMD	    설립일자
24	    FOAS_MEMRD	    개교기념일
25	    LOAD_DTM	    수정일
    */
    string district_code = 1; // 시도교육청코드
    string district_name = 2; // 시도교육청명
    string code = 3; // 표준학교코드
    string name = 4; // 학교명
    string name_eng = 5; // 영문학교명
    string kind = 6; // 학교종류명
    string location = 7; // 소재지명
    string organization = 8; // 관할조직명
    string foundation = 9; // 설립명
    string postal_code = 10; // 도로명우편번호
    string address = 11; // 도로명주소
    string address_detail = 12; // 도로명상세주소
    string telephone = 13; // 전화번호
    string homepage = 14; // 홈페이지주소
    string coeducation = 15; // 남녀공학구분명
    string fax = 16; // 팩스번호
    string highschool = 17; // 고등학교구분명
    string industry_special_class = 18; // 산업체특별학급존재여부
    string highschool_general_business = 19; // 고등학교일반실업구분명
    string highschool_special_purpose = 20; // 특수목적고등학교계열명
    string admission_before_after = 21; // 입시전후기구분명
    string day_night = 22; // 주야구분명
    string foundation_date = 23; // 설립일자
    string foundation_memorial = 24; // 개교기념일
    string modified_date = 25; // 수정일
}